fix(jwt): allow short JWT_SECRET in dev by SHA-256 expanding (warn in logs)